; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/usb/extr_cdc_ncm.c_cdc_ncm_find_endpoints.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/usb/extr_cdc_ncm.c_cdc_ncm_find_endpoints.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdc_ncm_ctx = type { %struct.usb_host_endpoint*, %struct.usb_host_endpoint*, %struct.usb_host_endpoint* }
%struct.usb_host_endpoint = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }
%struct.usb_interface = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { %struct.usb_host_endpoint*, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

@USB_ENDPOINT_XFERTYPE_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cdc_ncm_ctx*, %struct.usb_interface*)* @cdc_ncm_find_endpoints to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cdc_ncm_find_endpoints(%struct.cdc_ncm_ctx* %0, %struct.usb_interface* %1) #0 {
  %3 = alloca %struct.cdc_ncm_ctx*, align 8
  %4 = alloca %struct.usb_interface*, align 8
  %5 = alloca %struct.usb_host_endpoint*, align 8
  %6 = alloca i64, align 8
  store %struct.cdc_ncm_ctx* %0, %struct.cdc_ncm_ctx** %3, align 8
  store %struct.usb_interface* %1, %struct.usb_interface** %4, align 8
  store i64 0, i64* %6, align 8
  br label %7

7:                                                ; preds = %74, %2
  %8 = load i64, i64* %6, align 8
  %9 = load %struct.usb_interface*, %struct.usb_interface** %4, align 8
  %10 = getelementptr inbounds %struct.usb_interface, %struct.usb_interface* %9, i32 0, i32 0
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp slt i64 %8, %14
  br i1 %15, label %16, label %77

16:                                               ; preds = %7
  %17 = load %struct.usb_interface*, %struct.usb_interface** %4, align 8
  %18 = getelementptr inbounds %struct.usb_interface, %struct.usb_interface* %17, i32 0, i32 0
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = load %struct.usb_host_endpoint*, %struct.usb_host_endpoint** %20, align 8
  %22 = load i64, i64* %6, align 8
  %23 = getelementptr inbounds %struct.usb_host_endpoint, %struct.usb_host_endpoint* %21, i64 %22
  store %struct.usb_host_endpoint* %23, %struct.usb_host_endpoint** %5, align 8
  %24 = load %struct.usb_host_endpoint*, %struct.usb_host_endpoint** %5, align 8
  %25 = getelementptr inbounds %struct.usb_host_endpoint, %struct.usb_host_endpoint* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @USB_ENDPOINT_XFERTYPE_MASK, align 4
  %29 = and i32 %27, %28
  switch i32 %29, label %72 [
    i32 128, label %30
    i32 129, label %46
  ]

30:                                               ; preds = %16
  %31 = load %struct.usb_host_endpoint*, %struct.usb_host_endpoint** %5, align 8
  %32 = getelementptr inbounds %struct.usb_host_endpoint, %struct.usb_host_endpoint* %31, i32 0, i32 0
  %33 = call i32 @usb_endpoint_dir_in(%struct.TYPE_6__* %32)
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %45

35:                                               ; preds = %30
  %36 = load %struct.cdc_ncm_ctx*, %struct.cdc_ncm_ctx** %3, align 8
  %37 = getelementptr inbounds %struct.cdc_ncm_ctx, %struct.cdc_ncm_ctx* %36, i32 0, i32 2
  %38 = load %struct.usb_host_endpoint*, %struct.usb_host_endpoint** %37, align 8
  %39 = icmp eq %struct.usb_host_endpoint* %38, null
  br i1 %39, label %40, label %44

40:                                               ; preds = %35
  %41 = load %struct.usb_host_endpoint*, %struct.usb_host_endpoint** %5, align 8
  %42 = load %struct.cdc_ncm_ctx*, %struct.cdc_ncm_ctx** %3, align 8
  %43 = getelementptr inbounds %struct.cdc_ncm_ctx, %struct.cdc_ncm_ctx* %42, i32 0, i32 2
  store %struct.usb_host_endpoint* %41, %struct.usb_host_endpoint** %43, align 8
  br label %44

44:                                               ; preds = %40, %35
  br label %45

45:                                               ; preds = %44, %30
  br label %73

46:                                               ; preds = %16
  %47 = load %struct.usb_host_endpoint*, %struct.usb_host_endpoint** %5, align 8
  %48 = getelementptr inbounds %struct.usb_host_endpoint, %struct.usb_host_endpoint* %47, i32 0, i32 0
  %49 = call i32 @usb_endpoint_dir_in(%struct.TYPE_6__* %48)
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %51, label %61

51:                                               ; preds = %46
  %52 = load %struct.cdc_ncm_ctx*, %struct.cdc_ncm_ctx** %3, align 8
  %53 = getelementptr inbounds %struct.cdc_ncm_ctx, %struct.cdc_ncm_ctx* %52, i32 0, i32 1
  %54 = load %struct.usb_host_endpoint*, %struct.usb_host_endpoint** %53, align 8
  %55 = icmp eq %struct.usb_host_endpoint* %54, null
  br i1 %55, label %56, label %60

56:                                               ; preds = %51
  %57 = load %struct.usb_host_endpoint*, %struct.usb_host_endpoint** %5, align 8
  %58 = load %struct.cdc_ncm_ctx*, %struct.cdc_ncm_ctx** %3, align 8
  %59 = getelementptr inbounds %struct.cdc_ncm_ctx, %struct.cdc_ncm_ctx* %58, i32 0, i32 1
  store %struct.usb_host_endpoint* %57, %struct.usb_host_endpoint** %59, align 8
  br label %60

60:                                               ; preds = %56, %51
  br label %71

61:                                               ; preds = %46
  %62 = load %struct.cdc_ncm_ctx*, %struct.cdc_ncm_ctx** %3, align 8
  %63 = getelementptr inbounds %struct.cdc_ncm_ctx, %struct.cdc_ncm_ctx* %62, i32 0, i32 0
  %64 = load %struct.usb_host_endpoint*, %struct.usb_host_endpoint** %63, align 8
  %65 = icmp eq %struct.usb_host_endpoint* %64, null
  br i1 %65, label %66, label %70

66:                                               ; preds = %61
  %67 = load %struct.usb_host_endpoint*, %struct.usb_host_endpoint** %5, align 8
  %68 = load %struct.cdc_ncm_ctx*, %struct.cdc_ncm_ctx** %3, align 8
  %69 = getelementptr inbounds %struct.cdc_ncm_ctx, %struct.cdc_ncm_ctx* %68, i32 0, i32 0
  store %struct.usb_host_endpoint* %67, %struct.usb_host_endpoint** %69, align 8
  br label %70

70:                                               ; preds = %66, %61
  br label %71

71:                                               ; preds = %70, %60
  br label %73

72:                                               ; preds = %16
  br label %73

73:                                               ; preds = %72, %71, %45
  br label %74

74:                                               ; preds = %73
  %75 = load i64, i64* %6, align 8
  %76 = add nsw i64 %75, 1
  store i64 %76, i64* %6, align 8
  br label %7

77:                                               ; preds = %7
  ret void
}

declare dso_local i32 @usb_endpoint_dir_in(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
